--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "remixicon": "^4.2.0",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "web-vitals": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
