--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.19.2",
     "framer-motion": "^11.2.10",
     "mongoose": "^8.4.1",
