--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^10.0.5",
+    "remark-gfm": "^4.0.0",
     "remixicon": "^4.2.0",
     "tailwind-merge": "^2.3.0",
     "web-vitals": "^4.1.0"
