--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,1 @@
-{
-    "rewrites": [
-        { "source": "/(.*)", "destination": "/backend" }
-    ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
