--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,5 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/backend/index.js" }] }
+{
+    "rewrites": [
+        {"source": "/(.*)", "destination": "/"}
+    ]
+}
