Production First Test

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "name": "Candlyn AI",
-    "url": "http://localhost:3001"
+    "url": "https://62e6cb2a-8fd7-421b-829f-844d35c13c9e-00-140ls7xaiggjt.pike.replit.dev:3001"
 }
