--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "groq-sdk": "^0.5.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
