--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "express": "^4.19.2",
     "framer-motion": "^11.2.10",
+    "groq-sdk": "^0.5.0",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
