--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "rewrites": [
-        { "source": "/api/:path*", "destination": "http://pnode3.danbot.host:8356/:path*" }
+        { "source": "/api/:path*", "destination": "http://pnode3.danbot.host:8356/:path*" },
+        { "source": "/(.*)", "destination": "/index.html" }
     ]
 }
