--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "rewrites": [
-        { "source": "/api/:path*", "destination": "http://pnode3.danbot.host:8356/:path*" },
+        { "source": "/api1/:path*", "destination": "http://pnode3.danbot.host:8356/:path*" },
+        { "source": "/api2/:path*", "destination": "http://dono-01.danbot.host:9135/:path*" },
         { "source": "/(.*)", "destination": "/index.html" }
     ]
 }
